force-app/src/objects/bugtr_mp__Bug_Tracker_Setting__mdt.object
<CustomObject>
    <description>Metadata type for bug tracker admin page</description>
    <fields>
        <fullName>bugtr_mp__Allow_Community_User_To_Submit__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Allow users to create reports</description>
        <label>Allow_Community_User_To_Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bugtr_mp__Allow_Moderation__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Set all new reports to draft until privilege user manually submit report</description>
        <label>Allow_Moderation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bugtr_mp__Enable_Chatter_Auto_Follow__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enables chatter auto follow feature for attached to report user</description>
        <label>Enable Chatter Auto Follow</label>
        <type>Checkbox</type>
    </fields>
    <label>Bug_Tracker_Setting</label>
    <pluralLabel>Bug_Tracker_Settings</pluralLabel>
</CustomObject>